--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "grunt": "~0.4.2",
     "grunt-contrib-connect": "~0.6.0",
-    "dalekjs": "0.0.8"
+    "dalekjs": "0.0.8",
+    "dalek-browser-chrome": "0.0.9"
   }
 }
