--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt": "~0.4.2",
     "grunt-contrib-connect": "~0.6.0",
     "dalekjs": "0.0.8",
-    "dalek-browser-chrome": "0.0.9"
+    "dalek-browser-chrome": "0.0.9",
+    "dalek-reporter-html": "0.0.3"
   }
 }
