--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "grunt-contrib-connect": "~0.6.0",
     "dalekjs": "0.0.8",
     "dalek-browser-chrome": "0.0.9",
-    "dalek-reporter-html": "0.0.3"
+    "dalek-reporter-html": "0.0.3",
+    "grunt-dalek": "~0.2.0"
   }
 }
